--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "matchinglink",
-  "version": "0.0.0",
+  "name": "carousel-testing-app",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,7 +16,6 @@
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
-    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
