--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -67,11 +71,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "matchinglink:build"
+            "browserTarget": "carousel-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "matchinglink:build:production"
+              "browserTarget": "carousel-app:build:production"
             }
           }
         },
@@ -93,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -115,15 +120,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "matchinglink:serve"
+            "devServerTarget": "carousel-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "matchinglink:serve:production"
+              "devServerTarget": "carousel-app:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "matchinglink"
+    }
+  },
+  "defaultProject": "carousel-app"
 }
