--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "hammerjs": "^2.0.8",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
